Create structure project

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#b2ebf2</color>
+    <color name="colorPrimaryDark">#81b9bf</color>
+    <color name="colorAccent">#e5ffff</color>
+
+    <color name="white">#ffffff</color>
 </resources>
