--- a/app/src/main/res/layout/fragment_list_note.xml
+++ b/app/src/main/res/layout/fragment_list_note.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_note_container"
+        android:id="@+id/list_note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
