Re-adjustment view

--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:padding="8dp"
     android:orientation="vertical">
 
     <TextView
@@ -12,11 +12,5 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         tools:text="note note note note note note" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_marginTop="4dp"
-        android:background="#eeeeee" />
 
 </LinearLayout>
