--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="8dp"
     android:orientation="vertical">
 
     <EditText
@@ -9,14 +10,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/note_hint"
-        android:maxLines="5"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:maxLines="5" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="#eeeeee" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_gravity="end"
         android:text="@string/button_save_label"
         android:textColor="@color/white"
