--- a/app/src/main/res/layout/layout_delete_item.xml
+++ b/app/src/main/res/layout/layout_delete_item.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingBottom="10dp"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="8dp">
 
+        <Button
+            android:id="@+id/delete_item_note_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/button_delete_item_label"
+            android:textColor="@color/white"
+            android:theme="@style/MyButton" />
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
